--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,9 @@
-exclude .hgignore
-exclude .hgtags
+include manage.py
+recursive-include hip *
+exclude hip/logs/*.txt
 recursive-exclude tests *
-recursive-exclude virtualenv *
+recursive-exclude hip/elasticsearch *
+global-exclude *.log
+global-exclude *.pyc
+global-exclude *.zip
+global-exclude *.DS_Store
